[gd_scene load_steps=4 format=3 uid="uid://d26liph04hko0"]

[ext_resource type="Texture2D" uid="uid://dob57f4ftiecb" path="res://weapon/beam_launcher.png" id="1_ewb7q"]
[ext_resource type="Script" path="res://Script/beam_launcher.gd" id="1_v0dlt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_awemc"]

[node name="beam_launcher" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_v0dlt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_awemc")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="beamLaunder" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(59, 0)
scale = Vector2(3, 3)
texture = ExtResource("1_ewb7q")

[node name="shooting_point" type="Marker2D" parent="WeaponPivot/beamLaunder"]
unique_name_in_owner = true
position = Vector2(2.33333, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="sfx_shoot" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
